infra/k8s/rider-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rider-service
  namespace: ev91
  labels:
    app: rider-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: rider-service
  template:
    metadata:
      labels:
        app: rider-service
    spec:
      containers:
      - name: rider-service
        image: sanjub07/rider-service:latest
        ports:
        - containerPort: 4005
        resources:
          limits:
            memory: "2Gi"
            cpu: "500m"
          requests:
            memory: "1Gi"
            cpu: "100m"
        livenessProbe:
          httpGet:
            path: /api/v1/health/live
            port: 4005
          initialDelaySeconds: 120
          periodSeconds: 30
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /api/v1/health/ready
            port: 4005
          initialDelaySeconds: 60
          periodSeconds: 20
          timeoutSeconds: 3


---
apiVersion: v1
kind: Service
metadata:
  name: rider-service
  namespace: ev91
spec:
  selector:
    app: rider-service
  ports:
    - port: 4005
      targetPort: 4005
  type: ClusterIP
